# 23203_slepchenko

./: HashTable.cpp  HashTable.hpp  List.cpp  List.hpp  hash_table.cpp  hash_table_test.cpp
javaLabs/3Lab/: 1.ini  SimpleSelectorServer.java  SimpleSelectorServerNotes.java
javaLabs/MyLabs/BloomFilter/: settings.gradle
javaLabs/MyLabs/BloomFilter/app/: build.gradle
javaLabs/MyLabs/BloomFilter/bloom/: BloomFilter.java  Main.java  ParallelInt.java  ThreadPool.java
javaLabs/MyLabs/src/: ClassToLoad.java  Main.java
javaLabs/MyLabs/src/mypackage/: App.java
javaLabs/MyLabs/src/myunit/: RunRunRun.java
javaLabs/Torrent/: build.gradle  log1.txt  log2.txt  log3.txt  settings.gradle  test.torrent
javaLabs/Torrent/gradle/wrapper/: gradle-wrapper.properties
javaLabs/game/gradle/wrapper/: gradle-wrapper.properties
javaLabs/lab1/lab1/: build.gradle  settings.gradle
javaLabs/lab1/lab1/programms/: programm1.b
javaLabs/newLab1/: build.gradle.kts  settings.gradle.kts
javaLabs/newLab1/gradle/wrapper/: gradle-wrapper.properties
javaLabs/untitled/: build.gradle
lab1/: CMakeLists.txt  HTTest.cpp  HashTable.cpp  HashTable.hpp  Keys.txt  List.cpp  List.hpp
lab2/: CMakeLists.txt  main.cpp
lab2/configs/: cautious.json  cruel.json  risky.json
lab2/headers/: aggressivestrategy.h  blackjack.h  blackjacknum.h  card.h  console.h  deck.h  detailedsimulation.h  dynamicstrategy.h  factory.h  fastsimulation.h  loader.h  player.h  simplestrategy.h  simulation.h  simulationfactory.h  simulationregistrar.h  smartstrategy.h  strategy.h  strategyregistrar.h  tournamentsimulation.h
lab2/src/: aggressivestrategy.cpp  blackjack.cpp  card.cpp  console.cpp  deck.cpp  detailedsimulation.cpp  dynamicstrategy.cpp  fastsimulation.cpp  loader.cpp  player.cpp  simplestrategy.cpp  simulation.cpp  smartstrategy.cpp  tournamentsimulation.cpp
lab3/: CMakeLists.txt  beaconpattern.cpp  beaconpattern.h  emptypattern.cpp  emptypattern.h  factory.cpp  factory.h  gameWidget.cpp  gameWidget.h  gliderpattern.cpp  gliderpattern.h  grid.cpp  grid.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  oscillatorpattern.cpp  oscillatorpattern.h  pattern.cpp  pattern.h  patternregistrar.cpp  patternregistrar.h
(+79 files in other folders)
